--- a/arch/arm/boot/dts/bcm283x.dtsi
+++ b/arch/arm/boot/dts/bcm283x.dtsi
@@ -193,153 +193,167 @@
 			 * particular function together.
 			 */
 			dpi_gpio0: dpi_gpio0 {
-				brcm,pins = <0 1 2 3 4 5 6 7 8 9 10 11
-					     12 13 14 15 16 17 18 19
-					     20 21 22 23 24 25 26 27>;
-				brcm,function = <BCM2835_FSEL_ALT2>;
+				pins = 	"gpio0", "gpio1", "gpio2", "gpio3",
+					"gpio4", "gpio5", "gpio6", "gpio7",
+					"gpio8", "gpio9", "gpio10", "gpio11",
+					"gpio12", "gpio13", "gpio14", "gpio15",
+					"gpio16", "gpio17", "gpio18", "gpio19",
+					"gpio20", "gpio21", "gpio22", "gpio23",
+					"gpio24", "gpio25", "gpio26", "gpio27";
+				function = "alt2";
 			};
 			emmc_gpio22: emmc_gpio22 {
-				brcm,pins = <22 23 24 25 26 27>;
-				brcm,function = <BCM2835_FSEL_ALT3>;
+				pins = 	"gpio22", "gpio23", "gpio24", "gpio25",
+					"gpio26", "gpio27";
+				function = "alt3";
+			};
+			emmc_gpio34_pud_off: emmc_gpio34_pud_off {
+				pins = 	"gpio34";
+				function = "alt3";
+				bias-disable;
 			};
 			emmc_gpio34: emmc_gpio34 {
-				brcm,pins = <34 35 36 37 38 39>;
-				brcm,function = <BCM2835_FSEL_ALT3>;
-				brcm,pull = <BCM2835_PUD_OFF
-					     BCM2835_PUD_UP
-					     BCM2835_PUD_UP
-					     BCM2835_PUD_UP
-					     BCM2835_PUD_UP
-					     BCM2835_PUD_UP>;
+				pins = 	"gpio35", "gpio36", "gpio37",
+					"gpio38", "gpio39";
+				function = "alt3";
+				bias-pull-up;
 			};
 			emmc_gpio48: emmc_gpio48 {
-				brcm,pins = <48 49 50 51 52 53>;
-				brcm,function = <BCM2835_FSEL_ALT3>;
+				pins = 	"gpio48", "gpio49", "gpio50", "gpio51",
+					"gpio52", "gpio53";
+				function = "alt3";
 			};
 
 			gpclk0_gpio4: gpclk0_gpio4 {
-				brcm,pins = <4>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio4";
+				function = "alt0";
 			};
 			gpclk1_gpio5: gpclk1_gpio5 {
-				brcm,pins = <5>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio5";
+				function = "alt0";
 			};
 			gpclk1_gpio42: gpclk1_gpio42 {
-				brcm,pins = <42>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio42";
+				function = "alt0";
 			};
 			gpclk1_gpio44: gpclk1_gpio44 {
-				brcm,pins = <44>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio44";
+				function = "alt0";
 			};
 			gpclk2_gpio6: gpclk2_gpio6 {
-				brcm,pins = <6>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio6";
+				function = "alt0";
 			};
 			gpclk2_gpio43: gpclk2_gpio43 {
-				brcm,pins = <43>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
-				brcm,pull = <BCM2835_PUD_OFF>;
+				pins = "gpio43";
+				function = "alt0";
+				bias-disable;
 			};
 
 			i2c0_gpio0: i2c0_gpio0 {
-				brcm,pins = <0 1>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio0", "gpio1";
+				function = "alt0";
 			};
 			i2c0_gpio28: i2c0_gpio28 {
-				brcm,pins = <28 29>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio28", "gpio29";
+				function = "alt0";
 			};
 			i2c0_gpio44: i2c0_gpio44 {
-				brcm,pins = <44 45>;
-				brcm,function = <BCM2835_FSEL_ALT1>;
+				pins = "gpio44", "gpio45";
+				function = "alt1";
 			};
 			i2c1_gpio2: i2c1_gpio2 {
-				brcm,pins = <2 3>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = "gpio2", "gpio3";
+				function = "alt0";
 			};
 			i2c1_gpio44: i2c1_gpio44 {
-				brcm,pins = <44 45>;
-				brcm,function = <BCM2835_FSEL_ALT2>;
+				pins = "gpio44", "gpio45";
+				function = "alt2";
 			};
 			i2c_slave_gpio18: i2c_slave_gpio18 {
-				brcm,pins = <18 19 20 21>;
-				brcm,function = <BCM2835_FSEL_ALT3>;
+				pins = "gpio18", "gpio19", "gpio20", "gpio21";
+				function = "alt3";
 			};
 
 			jtag_gpio4: jtag_gpio4 {
-				brcm,pins = <4 5 6 12 13>;
-				brcm,function = <BCM2835_FSEL_ALT5>;
+				pins = 	"gpio4", "gpio5", "gpio6", "gpio12",
+					"gpio13";
+				function = "alt5";
 			};
 			jtag_gpio22: jtag_gpio22 {
-				brcm,pins = <22 23 24 25 26 27>;
-				brcm,function = <BCM2835_FSEL_ALT4>;
+				pins = 	"gpio22", "gpio23", "gpio24", "gpio25",
+					"gpio26", "gpio27";
+				function = "alt4";
 			};
 
 			pcm_gpio18: pcm_gpio18 {
-				brcm,pins = <18 19 20 21>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio18", "gpio19", "gpio20", "gpio21";
+				function = "alt0";
 			};
 			pcm_gpio28: pcm_gpio28 {
-				brcm,pins = <28 29 30 31>;
-				brcm,function = <BCM2835_FSEL_ALT2>;
+				pins = 	"gpio28", "gpio29", "gpio30", "gpio31";
+				function = "alt2";
 			};
 
 			pwm0_gpio12: pwm0_gpio12 {
-				brcm,pins = <12>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio12";
+				function = "alt0";
 			};
 			pwm0_gpio18: pwm0_gpio18 {
-				brcm,pins = <18>;
-				brcm,function = <BCM2835_FSEL_ALT5>;
+				pins = 	"gpio18";
+				function = "alt5";
 			};
 			pwm0_gpio40: pwm0_gpio40 {
-				brcm,pins = <40>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio40";
+				function = "alt0";
 			};
 			pwm1_gpio13: pwm1_gpio13 {
-				brcm,pins = <13>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio13";
+				function = "alt0";
 			};
 			pwm1_gpio19: pwm1_gpio19 {
-				brcm,pins = <19>;
-				brcm,function = <BCM2835_FSEL_ALT5>;
+				pins = 	"gpio19";
+				function = "alt5";
 			};
 			pwm1_gpio41: pwm1_gpio41 {
-				brcm,pins = <41>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio41";
+				function = "alt0";
 			};
 			pwm1_gpio45: pwm1_gpio45 {
-				brcm,pins = <45>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio45";
+				function = "alt0";
 			};
 
 			sdhost_gpio48: sdhost_gpio48 {
-				brcm,pins = <48 49 50 51 52 53>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio48", "gpio49", "gpio50", "gpio51",
+					"gpio52", "gpio53";
+				function = "alt0";
 			};
 
 			spi0_gpio7: spi0_gpio7 {
-				brcm,pins = <7 8 9 10 11>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio7", "gpio8", "gpio9", "gpio10",
+					"gpio11";
+				function = "alt0";
 			};
 			spi0_gpio35: spi0_gpio35 {
-				brcm,pins = <35 36 37 38 39>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio35", "gpio36", "gpio37", "gpio38",
+					"gpio39";
+				function = "alt0";
 			};
 			spi1_gpio16: spi1_gpio16 {
-				brcm,pins = <16 17 18 19 20 21>;
-				brcm,function = <BCM2835_FSEL_ALT4>;
+				pins = 	"gpio16", "gpio17", "gpio18", "gpio19",
+					"gpio20", "gpio21";
+				function = "alt4";
 			};
 			spi2_gpio40: spi2_gpio40 {
-				brcm,pins = <40 41 42 43 44 45>;
-				brcm,function = <BCM2835_FSEL_ALT4>;
+				pins = 	"gpio40", "gpio41", "gpio42", "gpio43",
+					"gpio44", "gpio45";
+				function = "alt4";
 			};
 
 			uart0_gpio14: uart0_gpio14 {
-				brcm,pins = <14 15>;
-				brcm,function = <BCM2835_FSEL_ALT0>;
+				pins = 	"gpio14", "gpio15";
+				function = "alt0";
 			};
 			/* Separate from the uart0_gpio14 group
 			 * because it conflicts with spi1_gpio16, and
@@ -347,18 +361,28 @@
 			 * without flow control.
 			 */
 			uart0_ctsrts_gpio16: uart0_ctsrts_gpio16 {
-				brcm,pins = <16 17>;
-				brcm,function = <BCM2835_FSEL_ALT3>;
+				pins = 	"gpio16", "gpio17";
+				function = "alt3";
 			};
 			uart0_ctsrts_gpio30: uart0_ctsrts_gpio30 {
-				brcm,pins = <30 31>;
-				brcm,function = <BCM2835_FSEL_ALT3>;
-				brcm,pull = <BCM2835_PUD_UP BCM2835_PUD_OFF>;
+				pins = "gpio30";
+				function = "alt3";
+				bias-pull-up;
+			};
+			uart0_ctsrts_gpio30_pudoff: uart0_ctsrts_gpio30_pudoff {
+				pins = "gpio31";
+				function = "alt3";
+				bias-disable;
 			};
 			uart0_gpio32: uart0_gpio32 {
-				brcm,pins = <32 33>;
-				brcm,function = <BCM2835_FSEL_ALT3>;
-				brcm,pull = <BCM2835_PUD_OFF BCM2835_PUD_UP>;
+				pins = "gpio32";
+				function = "alt3";
+				bias-disable;
+			};
+			uart0_gpio32_pudoff: uart0_gpio32_pudoff {
+				pins = "gpio33";
+				function = "alt3";
+				bias-pull-up;
 			};
 			uart0_gpio36: uart0_gpio36 {
 				brcm,pins = <36 37>;
